<resources>
    <string name="app_name">Game</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="close">Close</string>
    <string name="pay">Pay</string>
    <string name="exit_game">Alert</string>
    <string name="sure_exit_game">Are you sure to exit game?</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="is_not_login">No User Info,Login first</string>
    <string name="title_recharge">Recharge</string>
    <string name="user_register">register</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forget Password</string>
    <string name="title_game_list">GameList</string>
</resources>